Fixed menu bg color in dark mode

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -1,5 +1,5 @@
 .menu {
-  background-color: white;
+  background-color: var(--form-item-bg-color);
   border-radius: 4px;
   color: var(--body-text-color);
   list-style: none;
